Fix code wrap issue

--- a/css/style.css
+++ b/css/style.css
@@ -262,7 +262,7 @@ table th {
 #post pre > code {
     margin: 0;
     padding: 0;
-    white-space: pre;
+    white-space: pre-wrap;
     border: none;
     background: transparent;
 }
